envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sidecar-config
data:
  envoy-config: |
    admin:
      access_log_path: "/tmp/admin_access.log"
      address: 
        socket_address: 
          address: 127.0.0.1
          port_value: 9901
    static_resources:
      listeners:
        - name: "service-svc-http-listener"
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    stat_prefix: ingress_http
                    codec_type: auto
                    tracing: {}
                    route_config:
                      name: service-svc-http-route
                      virtual_hosts:
                        - name: service
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config: {}
      clusters:
      - name: service
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        # http2_protocol_options: {}
        load_assignment:
          cluster_name: service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 9080
      - name: jaeger
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: jaeger
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: simplest-collector
                    port_value: 9411
    tracing:
      http:
        name: envoy.tracers.zipkin
        typed_config:
          "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
          collector_cluster: jaeger
          collector_endpoint: "/api/v2/spans"
          shared_span_context: false
          collector_endpoint_version: HTTP_JSON
#    tracing:
#      http:
#        name: envoy.tracers.dynamic_ot
#        typed_config:
#          "@type": type.googleapis.com/envoy.config.trace.v2.DynamicOtConfig
#          library: /usr/local/lib/libjaegertracing_plugin.so
#          config:
#            service_name: productpage
#            sampler:
#              type: const
#              param: 1
#            reporter:
#              localAgentHostPort: 127.0.0.1:6831
#            headers:
#              jaegerDebugHeader: jaeger-debug-id
#              jaegerBaggageHeader: jaeger-baggage
#              traceBaggageHeaderPrefix: uberctx-
#            baggage_restrictions:
#              denyBaggageOnInitializationFailure: false
#              hostPort: ""
